[package]
name = "notify-hot-reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
notify = "6.1.1"
anyhow = "1.0.81"
toml_edit = { version = "0.18.1", features = ["easy", "serde"] }
